# septic-canary

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
septic_canary/: main.py
tests/: test_main.py
