[tool.poetry]
name = "septic_canary"
version = "0.0.0"
description = ""
authors = ["Dan Moran <danxmoran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
